Fixes issue with cursor being visible in non-editable flashcards

--- a/src/components/ace-editor/fixed-ace-editor.styles.scss
+++ b/src/components/ace-editor/fixed-ace-editor.styles.scss
@@ -1,3 +1,7 @@
 .fixed-editor {
   cursor: none;
 }
+
+.ace_hidden-cursors {
+  opacity: 0;
+}
